--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "farmani/remote-image-info",
   "description": "get image information without downloading whole file",
+  "keywords": ["image", "dimension", "size", "remote", "without download"],
   "type": "library",
   "homepage": "https://github.com/farmani/RemoteImageInfo",
   "license": "MIT",
@@ -23,7 +24,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.1-dev"
+      "dev-master": "0.1-dev"
     }
   }
 }
